# Practica_1_EDD

./: CMakeLists.txt  README.md  Simulador.cpp  Simulador.h  main.cpp
Clases/: Caja.cpp  Carreta.cpp  Cliente.cpp  ListaDoble.cpp  ListaDoble.h  Lista_Circular.cpp  Lista_Circular.h  Nodo.cpp  NodoCaja.cpp  NodoCliente.cpp  text.txt
Estructuras/: Cola.cpp  ColaAux.cpp  ColaAux.h  ListaDoble.cpp  Lista_Circular.cpp  pila.cpp
file/: File.cpp  File.h
headers/: Cola.h  ListaDoble.h  Lista_Circular.h  Nodo.h  NodoCaja.h  NodoCliente.h  pila.h
headers/class/: Caja.h  Carreta.h  Cliente.h  Nodo.h  NodoCaja.h  NodoCliente.h
